Se actualizo las claves de acceso al topic

--- a/UserListenerEventBus/ConsoleApp3/appsettings.json
+++ b/UserListenerEventBus/ConsoleApp3/appsettings.json
@@ -6,8 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ServiceBusConnectionString": "Endpoint=sb://demoservicebus-bot.servicebus.windows.net/;SharedAccessKeyName=send-listen;SharedAccessKey=Q3q3owkI7RQQt0IXpzwJk5kfeQXeiwREkdQgYgrKVvc=;EntityPath=clientes_nuevos",
-  "TopicName": "clientes_nuevos",
-  "SubscriptionName": "temp-sub",
+  "ServiceBusConnectionString": "Endpoint=sb://demoservicebus-bot.servicebus.windows.net/;SharedAccessKeyName=send-listen;SharedAccessKey=nqkAa6iyBUBl+TQ+zpA88V3TBl9MGfXXczh8dUpjXCE=;EntityPath=servicebus",
+  "TopicName": "servicebus",
+  "SubscriptionName": "servicebus-sub",
   "AllowedHosts": "*"
 }
